--- a/app/views/static_pages/root.html
+++ b/app/views/static_pages/root.html
@@ -16,9 +16,9 @@
 
 </div>
 
-<audio id="Kick instrument" src="https://s3.amazonaws.com/drummachine/kick.wav"/>
-<audio id="Hat instrument" src="https://s3.amazonaws.com/drummachine/closed-hat.wav"/>
-<audio id="Snare instrument" src="https://s3.amazonaws.com/drummachine/snare2.wav"/>
-<audio id="Tom instrument" src="https://s3.amazonaws.com/drummachine/tom.wav"/>
-<audio id="Open Hat instrument" src="https://s3.amazonaws.com/drummachine/open-hat.wav"/>
-<audio id="Clap instrument" src="https://s3.amazonaws.com/drummachine/clap.wav"/>
+<audio id="Kick instrument" class="instrument" src="https://s3.amazonaws.com/drummachine/kick.wav"/>
+<audio id="Hat instrument" class="instrument" src="https://s3.amazonaws.com/drummachine/closed-hat.wav"/>
+<audio id="Snare instrument" class="instrument" src="https://s3.amazonaws.com/drummachine/snare2.wav"/>
+<audio id="Tom instrument" class="instrument" src="https://s3.amazonaws.com/drummachine/tom.wav"/>
+<audio id="Open Hat instrument" class="instrument" src="https://s3.amazonaws.com/drummachine/open-hat.wav"/>
+<audio id="Clap instrument" class="instrument" src="https://s3.amazonaws.com/drummachine/clap.wav"/>
