--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -123,6 +123,7 @@
   margin: auto;
 }
 
+
 .button {
   width: 40px;
   height: 60px;
@@ -131,6 +132,14 @@
   margin: 5px;
   display: inline-block;
   cursor: pointer;
+}
+
+.active {
+  background-color: yellow;
+}
+
+.buttons .button:nth-of-type(4n+1) {
+  background-color: darkred;
 }
 
 .volume-slider {
@@ -155,10 +164,6 @@
 
 .on {
   background-color: red;
-}
-
-.active {
-  background-color: yellow;
 }
 
 .footer {
