--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -239,8 +239,8 @@
   border-bottom-right-radius: 0;
 }
 
-.active {
-  background-color: yellow;
+.active{
+  background-color: yellow !important;
 }
 
 .errors {
