--- a/app/views/static_pages/root.html
+++ b/app/views/static_pages/root.html
@@ -8,13 +8,15 @@
   </div>
 
 <div class="footer">
-  Click Play to start the sequencer.  Each of the 16 buttons along the bottom can
+  <p>Instructions</p>
+  <p class="instructions">Click Play to start the sequencer.  Each of the 16 buttons along the bottom can
   clicked to add a sound to that step in the sequence.  The sound can be selected
   with the instrument select buttons in the middle of the drum machine.  Each sound
-  has an individual volume slider beneath its instrument select button.  <br/>The global
+  has an individual volume slider beneath its instrument select button.</p>
+  <p class="instructions">The global
   tempo can be set with the tempo slider in the upper right hand corner.  Individual patterns
   can be named in the top right, and saved to the browser cookie for later recall with the
-  save button.  Try making a few patterns and switching between them on the fly!
+  save button.  Try making a few patterns and switching between them on the fly!</p>
 
 </div>
 
