Add flashing light on instrument panel when instrument is playing.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -223,6 +223,10 @@
   background-color: red;
 }
 
+.playing-light {
+  background-color: yellow;
+}
+
 .footer {
   text-align: center;
   color: #aaa;
