--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -41,7 +41,7 @@
    font-family: 'Raleway', sans-serif;
    font-size: 16px;
    line-height: 1.1666666666;
-   color: #000;
+   color: #eee;
  }
 
  ul {
@@ -66,14 +66,14 @@
   border-radius: 20px;
   margin: 20px auto;
   border: 2px solid #aaa;
-  background: #eee;
+  background: #000;
 }
 
 .big-button {
   width: 50px;
-  background-color: #000;
+  background-color: #aaa;
   border-radius: 5px;
-  color: #FFF;
+  color: #eee;
   padding: 20px;
   margin: 20px;
   text-align: center;
@@ -104,7 +104,7 @@
 }
 
 .playing {
-  color: red;
+  color: lime;
 }
 
 .panel-item {
@@ -124,6 +124,7 @@
   display: inline;
 }
 
+
 .panel-label {
   display: block;
   margin: 5px;
@@ -141,6 +142,7 @@
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
   position: relative;
+  color: #000
 }
 
 
@@ -184,12 +186,11 @@
   margin: auto;
 }
 
-
 .button {
   width: 40px;
   height: 60px;
   border-radius: 5px;
-  background-color: #000;
+  background-color: #aaa;
   margin: 5px;
   display: inline-block;
   cursor: pointer;
@@ -211,9 +212,13 @@
   margin: auto;
 }
 
+.playing-button {
+  background-color: yellow;
+}
+
 .light {
   border-radius: 50%;
-  background-color: #fff;
+  background-color: #eee;
   width: 5px;
   height: 5px;
   margin: 5px auto;
@@ -221,10 +226,6 @@
 
 .on {
   background-color: red;
-}
-
-.playing-light {
-  background-color: yellow;
 }
 
 .footer {
@@ -264,6 +265,7 @@
 .instructions {
   margin: 20px;
   text-align: left;
+  color: #000
 }
 
 /* SLIDER STYLING */
@@ -274,7 +276,7 @@ input[type=range]{
 
 input[type=range]::-webkit-slider-runnable-track {
   height: 3px;
-  background: #000;
+  background: #aaa;
   border-radius: 5px;
 }
 
