--- a/app/views/static_pages/root.html
+++ b/app/views/static_pages/root.html
@@ -8,7 +8,7 @@
   </div>
 
 <div class="footer">
-  <p>Instructions</p>
+  <h1 class="instructions headline">Instructions</h1>
   <p class="instructions">Click Play to start the sequencer.  Each of the 16 buttons along the bottom can
   clicked to add a sound to that step in the sequence.  The sound can be selected
   with the instrument select buttons in the middle of the drum machine.  Each sound
